ui: 現在ひょうじしているページのナブバーの色を変える

--- a/app/views/guest/_header.html.slim
+++ b/app/views/guest/_header.html.slim
@@ -20,10 +20,10 @@
 
   #menu_pc
     ul
-      li = link_to "さがす", searches_path
-      li = link_to "いいね", likes_path
-      li = link_to 'コミュニティ', communities_path
-      li = link_to 'つぶやき', murmurs_path
-      li = link_to "マイページ", user_path(current_user)
+      li = link_to "さがす", searches_path, class: "#{ 'active' if controller.controller_name == 'searches'}"
+      li = link_to "いいね", likes_path, class: "#{ 'active' if controller.controller_name == 'likes'}"
+      li = link_to "コミュニティ", communities_path, class: "#{ 'active' if controller.controller_name == 'communities'}"
+      li = link_to "つぶやき", murmurs_path, class: "#{ 'active' if controller.controller_name == 'murmurs'}"
+      li = link_to "マイページ", user_path(current_user), class: "#{ 'active' if controller.controller_name == 'users'}"
 
 
