--- a/app/assets/stylesheets/guest/layers/_navbar.sass
+++ b/app/assets/stylesheets/guest/layers/_navbar.sass
@@ -98,7 +98,7 @@
         width: 100%
         text-align: center
         font-size: 14px
-        &:hover
+        &.active, &:hover
           background-color: $white
           color: $red
       +responsive(smartphone)
