--- a/app/views/guest/murmurs/_murmur.html.slim
+++ b/app/views/guest/murmurs/_murmur.html.slim
@@ -27,10 +27,10 @@ section.murmur_panel
         = link_to image_tag('smile'), murmur_smiles_path(user: current_user, murmur: murmur), method: :post
       = murmur.smiles.size
     .murmur_items
-      / テスト
-      button.btn.btn-default[type="button" data-toggle="modal" data-target="#EditModal#{murmur.id}"]
-        |  編集する
-      = link_to '削除', murmur_path(id: murmur), method: :delete, class: 'btn btn-default', data: { confirm: 'Are you sure?' }
+      - if murmur.user == current_user
+          button.btn.btn-default[type="button" data-toggle="modal" data-target="#EditModal#{murmur.id}"]
+            |  編集する
+          = link_to '削除', murmur_path(id: murmur), method: :delete, class: 'btn btn-default', data: { confirm: 'Are you sure?' }
       button.btn.btn-default[type="button" data-toggle="modal" data-target="#CommentModal#{murmur.id}"]
         |  コメント
       = render 'modal', murmur: murmur
