fix: ありがとうをajaxに変更&属性バッジのがぞうがなくなった影響できもくなってるので一旦コメントアウト

--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -13,12 +13,12 @@
       p
         | 無料登録完了後、コミュニティに参加し気になる人にいいね！を送りましょう♪
     .gender-badges
-      = image_tag 'sex_badge_1.png'
-      = image_tag 'sex_badge_2.png'
-      = image_tag 'sex_badge_3.png'
-      = image_tag 'sex_badge_4.png'
-      = image_tag 'sex_badge_5.png'
-      = image_tag 'sex_badge_6.png'
+      / = image_tag 'sex_badge_1.png'
+      / = image_tag 'sex_badge_2.png'
+      / = image_tag 'sex_badge_3.png'
+      / = image_tag 'sex_badge_4.png'
+      / = image_tag 'sex_badge_5.png'
+      / = image_tag 'sex_badge_6.png'
     .registration-btns
       = link_to user_facebook_omniauth_authorize_path, class: 'facebook_button' do
         i.fa.fa-facebook
