--- a/app/views/guest/likes/index.html.slim
+++ b/app/views/guest/likes/index.html.slim
@@ -13,11 +13,19 @@
               .panel_name = user.name
               .panel_age = "#{user.user_profile.age}歳"
               .panel_address = user.user_profile.prefecture.name
+            /  TODO: なにやりたいのかわすれた
             .panel_day = '2017年4月26日'
           .panel_body_pc
             = truncate(user.user_profile.introduce, omission: '・・・', length: 50)
           .panel_body_sp
             = truncate(user.user_profile.introduce, omission: '・・・', length: 20)
-      .panel_bottun = link_to 'ありがとう', match_like_path(id: user, target: current_user)
+      div[class="panel_bottun thanks_like_button_#{user.id}"]
+        - _like = current_user.from_like_users.find_by(user_id: user.id)
+        - if _like.matched?
+          = link_to 'マッチ済み', messages_path, class: 'btn btn-default text-dark'
+        - else
+          = form_for(_like, url: match_like_path(user.id), remote: true) do |f|
+            = f.hidden_field :target_id, value: current_user.id
+            = f.submit 'ありがとう', class: 'btn btn-danger', style: 'width: 100%;'
 
   .pagenate  = paginate @like_users
