--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -1,12 +1,3 @@
-/ #layer_board_area
-/   .layer_board_bg
-/   .layer_board
-/     p = link_to image_tag('premire_baner'), 'http://www.yahoo.co.jp', :target => "_blank"
-/     p.btn_close
-/       = link_to image_tag('sex_badge_1', size: '50'), '#'
-/     p.layer_board_btn
-/       = link_to 'もう一度開く', '#'
-
 .registration-tutorial-box.text-center
   = image_tag 'tutorial_1.png', class: 'tutorial_img tutorial_active change-btn next-btn'
   = image_tag 'tutorial_2.png', class: 'tutorial_img change-btn'
@@ -37,7 +28,8 @@
             .card_info
               .card_age = "#{user.user_profile.age}歳"
               .card_address = user.user_profile.prefecture.name
-              .card_sex = image_tag "sex_badge_#{user.user_profile.sex}"
+              / TODO: 属性の画像が復活したらコメントアウト戻す
+              / .card_sex = image_tag "sex_badge_#{user.user_profile.sex}"
           .card_body
             .card_name = user.name
           .card_footer
