--- a/app/views/guest/communities/show.html.slim
+++ b/app/views/guest/communities/show.html.slim
@@ -23,7 +23,7 @@
     .mypage_profile_section
     .mypage_profile_label
       .edit_title = 'みんなの投稿'
-      button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
+      button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#communityMurmurModal"]
         |  投稿
 
       = render 'guest/topics/form_modal'
