--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -6,10 +6,11 @@
 
 
 .panelList_section
-  .panelList_search_button.text-right
-    button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
-      |  条件検索
-    #sampleModal.modal.fade[tabindex="-1"]
+  .panelList_search_button
+    .text-right
+      button.btn.btn-danger[type="button" data-toggle="modal" data-target="#searchModal"]
+        |  条件検索
+    #searchModal.modal.fade[tabindex="-1"]
       .modal-dialog
         .modal-margin
           .modal-content
