--- a/app/views/guest/topics/_form_modal.html.slim
+++ b/app/views/guest/topics/_form_modal.html.slim
@@ -1,5 +1,5 @@
 / コミュニティトピック投稿
-#sampleModal.modal.fade[tabindex="-1"]
+#communityMurmurModal.modal.fade[tabindex="-1"]
   .modal-dialog
     .modal-margin
       .modal-content
