--- a/app/views/guest/murmurs/index.html.slim
+++ b/app/views/guest/murmurs/index.html.slim
@@ -6,7 +6,7 @@
     .mypage_profile_section
       .mypage_profile_label
         .edit_title = 'みんなの投稿'
-        button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
+        button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#murmurModal"]
           |  投稿
 
         = render 'guest/murmurs/form_modal'
