--- a/app/views/guest/topics/_topic.html.slim
+++ b/app/views/guest/topics/_topic.html.slim
@@ -5,7 +5,7 @@ section.murmur_panel
         - if topic.writer.user_profile.image1.blank?
           = image_tag 'default', class: "img-radius"
         - else
-          = link_to image_tag(topic.writer.user_profile.image1.thumb, class: 'img-circle', size: '100'), search_path(topic.writer)
+          = link_to image_tag(topic.writer.user_profile.image1.thumb, class: 'img-circle', size: '100'), member_community_path(community, topic.writer)
       .user_info
         .user_name
           = topic.writer.name
