--- a/app/views/admin/user/premium_users.html.erb
+++ b/app/views/admin/user/premium_users.html.erb
@@ -34,8 +34,8 @@
           <td>1/1</td>
           <td>1/1</td>
           <td>1/1</td>
-          <td><%= user.to_like_users.count %></td>
-          <td><%= user.from_like_users.count %></td>
+          <td><%= user.to_likes.count %></td>
+          <td><%= user.from_likes.count %></td>
           <td><%= user.to_block_users.count %></td>
           <td><%= user.from_block_users.count %></td>
         </tr>
