--- a/app/views/guest/likes/index.html.slim
+++ b/app/views/guest/likes/index.html.slim
@@ -20,7 +20,7 @@
           .panel_body_sp
             = truncate(user.user_profile.introduce, omission: '・・・', length: 20)
       div[class="panel_bottun thanks_like_button_#{user.id}"]
-        - _like = current_user.from_like_users.find_by(user_id: user.id)
+        - _like = current_user.from_likes.find_by(user_id: user.id)
         - if _like.matched?
           = link_to 'マッチ済み', messages_path, class: 'btn btn-default text-dark'
         - else
