--- a/app/views/guest/murmurs/_murmur.html.slim
+++ b/app/views/guest/murmurs/_murmur.html.slim
@@ -5,7 +5,7 @@ section.murmur_panel
         - if murmur.user == current_user
           = image_tag murmur.user.user_profile.image1.thumb, class: 'img-circle'
         - else
-          = link_to image_tag(murmur.user.user_profile.image1.thumb, class: 'img-circle'), search_path(murmur.user)
+          = link_to image_tag(murmur.user.user_profile.image1.thumb, class: 'img-circle'), writer_murmur_path(murmur)
       .user_info
         .user_name = murmur.user.name
         .user_age = "#{murmur.user.user_profile.age}歳"
