--- a/app/views/guest/users/preview.html.slim
+++ b/app/views/guest/users/preview.html.slim
@@ -55,29 +55,35 @@
                 th 年齢
                 td = @user.user_profile.age
               tr
-                th 身長
-                td = @user.user_profile.height
-              tr
-                th 血液型
-                td = @user.user_profile.blood_type
-              tr
                 th 居住地
                 td = @user.user_profile.prefecture.name
               tr
-                th 兄弟姉妹
-                td = @user.user_profile.bro_sis
-              tr
-                th 同居人
-                td = @user.user_profile.housemate
+                th 身長
+                td = @user.user_profile.height
               tr
                 th 体型
                 td = @user.user_profile.style
               tr
-                th 趣味
-                td = @user.user_profile.hobby.join
+                th 職業
+                td = @user.user_profile.job
               tr
-                th 目的
-                td = @user.user_profile.purpose
+                th 年収
+                td = @user.user_profile.income
+              tr
+                th 血液型
+                td = @user.user_profile.blood_type
+              tr
+                th 学歴
+                td = @user.user_profile.school
+          .profile_body_title = '詳細情報'
+          .profile_sub_body
+            table
+              tr
+                th 趣味・好きなこと
+                td = @user.user_profile.hobby
+              tr
+                th 同居人
+                td = @user.user_profile.housemate
               tr
                 th お酒
                 td = @user.user_profile.alcohol
@@ -85,27 +91,8 @@
                 th タバコ
                 td = @user.user_profile.smoke
               tr
-                th 性格
-                td = @user.user_profile.personality.join
-          .profile_body_title = '学歴・職歴'
-          .profile_sub_body
-            table
-              tr
-                th 職業
-                td = @user.user_profile.job
-              tr
-                th 休日
-                td = @user.user_profile.holiday
-              tr
-                th 年収
-                td = @user.user_profile.income
-              tr
-                th 学歴
-                td = @user.user_profile.school
-
-          .profile_body_title = '学歴・職歴'
-          .profile_sub_body
-            table
+                th 目的
+                td = @user.user_profile.purpose
               tr
                 th 結婚歴
                 td = @user.user_profile.marriage
@@ -113,8 +100,17 @@
                 th 子供
                 td = @user.user_profile.child
               tr
+                th 性格
+                td = @user.user_profile.personality
+              tr
+                th 休日
+                td = @user.user_profile.holiday
+              tr
                 th 出会うまでの希望
                 td = @user.user_profile.to_meet
+              tr
+                th 兄弟姉妹
+                td = @user.user_profile.bro_sis
 
 
 
