--- a/app/views/guest/likes/match.js.erb
+++ b/app/views/guest/likes/match.js.erb
@@ -1,1 +1,1 @@
-$(".thanks_like_button_<%= @like.user_id %> ").html('<%=j render partial: "sent_thanks" %>');
+$(".card_like_button_<%= @like.user_id %> ").html('<%=j render partial: "sent_thanks" %>');
