feat: モーダル切り分け

--- a/app/assets/stylesheets/guest/modules/_panel.sass
+++ b/app/assets/stylesheets/guest/modules/_panel.sass
@@ -17,7 +17,7 @@
     @extend .panelList_section
     +responsive(smartphone)
       padding: 0
-  &_search_button
+  &_search_modal
     margin-bottom: 20px
   &_community_section
     overflow: hidden
