--- a/app/views/guest/communities/_form.html.slim
+++ b/app/views/guest/communities/_form.html.slim
@@ -1,4 +1,4 @@
-.panelList_search_button.text-right
+.panelList_search_modal.text-right
   button.btn.btn-danger[type="button" data-toggle="modal" data-target="#communityModal"]
     |  コミュニティ作成
   #communityModal.modal.fade[tabindex="-1"]
