ui: search_modalのlabelが右寄りだっったので左寄りに変更

--- a/app/views/guest/searches/_search_modal.html.slim
+++ b/app/views/guest/searches/_search_modal.html.slim
@@ -2,7 +2,7 @@
   .modal-dialog
     .modal-margin
       .modal-content
-        .modal-body
+        .modal-body.text-left
           = search_form_for(@q, url: searches_path, method: :get) do |f|
             .row
               .col-sm-6
