--- a/app/views/guest/communities/my_communities.html.slim
+++ b/app/views/guest/communities/my_communities.html.slim
@@ -1,5 +1,8 @@
 .panelList_like_section
-  = render 'form'
+  .panelList_search_modal.text-right
+    button.btn.btn-danger[type="button" data-toggle="modal" data-target="#communityModal"]
+      |  コミュニティ作成
+    = render 'create_community_modal'
 
   .tab_header
     = link_to 'コミュニティ検索', communities_path, class: 'tab_bottun'
