fix:　一度のいいねで複数レコードができるバグ修正

--- a/app/views/guest/searches/index.html.slim
+++ b/app/views/guest/searches/index.html.slim
@@ -38,3 +38,14 @@
                   = f.submit 'いいね', class: 'btn btn-danger', style: 'width: 100%;'
 
     = paginate @users
+
+javascript:
+  // // チュートリアル
+  window.addEventListener('DOMContentLoaded', function() {
+    if(gon.tutorial_status == 'pending'){
+      $('.registration-tutorial-bg').fadeIn(3000);
+      $('.registration-tutorial-box').fadeIn(3000);
+      $('.mypage_profile_registrate_box').fadeIn(3000);
+      $('.tutorial_active').fadeIn(3000);
+    }
+  });
