--- a/app/views/guest/messages/index.html.slim
+++ b/app/views/guest/messages/index.html.slim
@@ -38,7 +38,7 @@
                 .message_card_left = m.body
           .message_form
           -if @message
-            = form_for @message, url: messages_path(@message), method: :post, remote: true do |f|
+            = form_for @message, url: messages_path(@message), method: :post do |f|
               = f.text_area :body, class: 'message_text'
               = f.hidden_field :partnership_id, value: @partnerships.first.id
               = f.hidden_field :sender_id, value: current_user.id
