--- a/app/views/guest/users/show.html.slim
+++ b/app/views/guest/users/show.html.slim
@@ -64,13 +64,13 @@
 
 javascript:
   // // チュートリアル
-  // window.addEventListener('DOMContentLoaded', function() {
-  //   if(gon.tutorial_status == 'pending'){
-  //     $('.registration-tutorial-bg').fadeIn(3000);
-  //     $('.registration-tutorial-box').fadeIn(3000);
-  //     $('.mypage_profile_registrate_box').fadeIn(3000);
-  //     $('.tutorial_active').fadeIn(3000);
-  //   }
-  // });
+  window.addEventListener('DOMContentLoaded', function() {
+    if(gon.tutorial_status == 'pending'){
+      $('.registration-tutorial-bg').fadeIn(3000);
+      $('.registration-tutorial-box').fadeIn(3000);
+      $('.mypage_profile_registrate_box').fadeIn(3000);
+      $('.tutorial_active').fadeIn(3000);
+    }
+  });
 
 
