--- a/app/views/guest/users/_sidebar.html.slim
+++ b/app/views/guest/users/_sidebar.html.slim
@@ -78,13 +78,13 @@
                   .form-group
                     label
                       | 属性
-                    = f.select :sex, UserProfile.sexes.keys.to_a, {}, prompt:"選択してください", autofocus: 'true', class: 'form-control'
+                    = f.select :sex, UserProfile.sexes.keys.to_a, {prompt:"選択してください"}, autofocus: 'true', class: 'form-control'
               .row
                 .col-md-12.select
                   .form-group
                     label
                       | タチ・ネコ
-                    = f.select :play_style, UserProfile.play_styles.keys.to_a, {}, prompt:"選択してください", class: 'form-control'
+                    = f.select :play_style, UserProfile.play_styles.keys.to_a, {prompt:"選択してください"}, class: 'form-control'
 
               .row
                 .col-md-12.select
@@ -97,7 +97,7 @@
                   .form-group
                     label
                       | 居住地
-                    = f.collection_select :address, JpPrefecture::Prefecture.all, :code, :name, {prompt:"選択してください"} ,{:class => "form-control"}
+                    = f.collection_select :address, JpPrefecture::Prefecture.all, :code, :name, {prompt:"選択してください"}, {:class => "form-control"}
                 .text-center
                   = f.submit '保存', class: "btn btn-info text-center"
 
