--- a/app/views/guest/topics/_topic.html.slim
+++ b/app/views/guest/topics/_topic.html.slim
@@ -40,13 +40,13 @@ section.murmur_panel
 
   / TODO: 数はリファクタ
   - if topic.chats.size >= 1
-    .text-right
-      button.btn.btn-default data-target="##{topic.id}" data-toggle="collapse" type="button" = "コメント#{topic.chats.size}件"
+    p.text-right
+      button.btn.btn-default data-target="#topic_#{topic.id}" data-toggle="collapse" type="button" = "コメント#{topic.chats.size}件"
 
-  .collapse id="#{topic.id}"
-    - topic.chats.each do |chat|
-      = link_to image_tag(chat.user.user_profile.image1.thumb, class: 'img-circle', size: '50'), search_path(chat.user)
-      = chat.user.name
-      br
-      = chat.body
-      hr
+    .collapse id="topic_#{topic.id}"
+      - topic.chats.each do |chat|
+        = link_to image_tag(chat.user.user_profile.image1.thumb, class: 'img-circle', size: '50'), search_path(chat.user)
+        = chat.user.name
+        br
+        = chat.body
+        hr
